--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^0.13.3",
     "reactify": "^1.1.1",
     "run-sequence": "^1.1.0",
-    "serve-static": "^1.9.3"
+    "serve-static": "^1.9.3",
+    "classnames": "^2.1.3"
   }
 }
